--- a/src/page/style/Login.css
+++ b/src/page/style/Login.css
@@ -35,6 +35,7 @@
 .input-box {
   width: 100%;
   height: 60%;
+  text-align: center;
 }
 
 .input-box input {
@@ -51,6 +52,7 @@
 .signin-box {
   width: 100%;
   height: 20%;
+  text-align: center;
 }
 .signin-box p {
   display: inline-block;
