--- a/src/page/style/intro.css
+++ b/src/page/style/intro.css
@@ -6,10 +6,38 @@
   width: 70%;
   height: 100%;
   float: left;
-  background-color: #ccc;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url(../../asset/bg.png);
+  background-size: contain;
+}
+
+.left > p {
+  text-align: center;
+}
+
+.left > div {
+  height: 50px;
+  width: 100px;
+  border: 1px solid #ccc;
+  font-size: 20px;
+  color: black;
+  background-color: #ccc;
+  opacity: 0.8;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  transition-duration: 0.8s;
+  cursor: pointer;
+}
+.left > div:hover {
+  background: #c62917;
+  color: aliceblue;
+  opacity: 0.9;
 }
 
 .right {
@@ -22,7 +50,8 @@
   flex-direction: column;
 }
 
-.right .login-btn, .right .signup-btn {
+.right .login-btn,
+.right .signup-btn {
   width: 90%;
   height: 50px;
   box-sizing: border-box;
