--- a/src/page/style/BoardBox.css
+++ b/src/page/style/BoardBox.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 50px;
   margin-bottom: 5px;
-  border: 1px solid black;
+  border: 1px solid #bbb;
   display: flex;
   align-items: center;
   padding-left: 10px;
@@ -12,6 +12,6 @@
 
 .content-box {
   width: 100%;
-  border: 1px solid gray;
+  border: 1px solid #bbb;
   border-bottom: none;
 }
