--- a/src/page/style/BoardLayout.css
+++ b/src/page/style/BoardLayout.css
@@ -7,7 +7,7 @@ div {
   width: 100%;
   height: 60px;
   margin-bottom: 5px;
-  border: 1px solid black;
+  border: 1px solid #bbb;
   display: flex;
   align-items: center;
   font-weight: 800;
@@ -37,7 +37,7 @@ div {
   width: 100%;
   height: 60px;
   margin-bottom: 5px;
-  border: 1px solid black;
+  border: 1px solid #bbb;
   display: flex;
   align-items: center;
   font-weight: 800;
