--- a/src/page/style/ContentBox.css
+++ b/src/page/style/ContentBox.css
@@ -1,7 +1,8 @@
-.post {
+.Post {
   width: 100%;
   height: 80px;
-  border-bottom: 1px solid gray;
+  /* border: 1px solid #bbb; */
+  border-bottom: 1px solid #bbb;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 15px;
