--- a/src/page/style/PostDetail.css
+++ b/src/page/style/PostDetail.css
@@ -39,12 +39,6 @@
   border-radius: 10px;
   background-color: #ccc;
 }
-.post-comment {
-  width: 100%;
-  height: 30px;
-  border: 1px solid black;
-  margin-top: 10px;
-}
 
 /* detail top box */
 
@@ -109,4 +103,95 @@
 
 .detail-comment {
   color: #0ca5af;
+}
+
+/* 댓글창  */
+.post-comment {
+  width: 100%;
+
+  border: 1px solid #bbb;
+  border-top: none;
+  padding: 15px;
+}
+
+.comment-top {
+  height: 25px;
+  width: 100%;
+
+  /* border: 1px solid black; */
+
+  display: flex;
+  align-items: center;
+}
+
+.comment-img {
+  height: 20px;
+  width: 20px;
+}
+
+.comment-writer {
+  margin-left: 5px;
+  font-weight: bold;
+}
+
+.commnet-middle {
+  width: 100%;
+
+  /* border: 1px solid black; */
+}
+
+.comment-bottom {
+  width: 100%;
+  /* border: 1px solid black; */
+
+  margin-top: 5px;
+
+  color: #a6a6a6;
+  font-size: 12px;
+}
+
+/* comment create
+
+
+
+
+*/
+
+.comment-create {
+  height: 40px;
+  width: 100%;
+  border: 1px solid #bbb;
+  border-top: none;
+}
+
+.comment-input {
+  box-sizing: border-box;
+  width: 95%;
+  height: 100%;
+  padding: 10px;
+  font-size: 13px;
+  background-color: #f9f9f9;
+
+  float: left;
+
+  border: none;
+  outline: none;
+}
+
+.comment-submit {
+  /* box-sizing: border-box; */
+  width: 5%;
+  height: 100%;
+
+  border: none;
+  float: left;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #c62917;
+  color: white;
+
+  cursor: pointer;
 }
