--- a/src/page/style/RightBox.css
+++ b/src/page/style/RightBox.css
@@ -1,9 +1,81 @@
-.best {
-  border: 1px solid black;
-  margin-bottom: 5px;
+.RightBox {
+  width: 100%;
+  /* border: 1px solid black; */
 }
 
-.request {
-  border: 1px solid black;
+.best-box {
+  width: 100%;
+  /* height: 232px; */
+  background-color: #f9f9f9;
+  border: 1px solid #d6d6d6;
+}
+.best-box-name {
+  width: 100%;
+  height: 40px;
+  /* background-color: #ccc; */
+  padding: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #3744a5;
+  /* border: 1px solid red; */
+}
+
+.best-content-box {
+  height: 95px;
+  padding: 10px;
+  border-top: 1px solid #d6d6d6;
+}
+
+.best-post-top {
+  height: 18px;
   margin-bottom: 5px;
+
+  font-size: 13px;
+  font-weight: bold;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.best-post-middle {
+  height: 30px;
+  margin-bottom: 5px;
+  font-size: 12px;
+  color: #737373;
+
+  /* border: 1px solid black; */
+
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+}
+
+.best-post-bottom {
+  height: 14px;
+
+  font-size: 11px;
+
+  /* border: 1px solid black; */
+}
+.best-board {
+  float: left;
+  margin-right: 10px;
+}
+
+.best-like {
+  float: right;
+  margin-left: 10px;
+
+  color: #c62917;
+}
+.best-comment {
+  float: right;
+  margin-left: 10px;
+
+  color: #0ca5af;
+}
+
+.clear {
+  clear: both;
 }
